attempting to fix mobile nav spacing

--- a/public/themes/v2/stylesheets/all.css
+++ b/public/themes/v2/stylesheets/all.css
@@ -1418,7 +1418,7 @@
 		}
 		
 		#navigation-user-menu {
-			top: 77px;
+			top: 78px;
 			margin-top: 0;
 		}
 		
